--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,10 +10,14 @@
       <section>
         <%= render 'shared/micropost_form' %>
       </section>
+	  <section>
+        <%= render 'shared/bucketlist_form' %>
+      </section>
     </aside>
     <div class="span8">
       <h3>Micropost Feed</h3>
       <%= render 'shared/feed' %>
+	  
     </div>
   </div>
 <% else %>
